Float the upload button to prevent extra whitespace screwing up alignment

--- a/app/assets/stylesheets/photo_manager.css.scss
+++ b/app/assets/stylesheets/photo_manager.css.scss
@@ -10,7 +10,8 @@ $manager-side-bar-width: 320px;
     width: 130px;
     margin: 10px;
     position: relative;
-    display: inline-block;
+    display: block;
+    float: left;
     vertical-align: top;
     background-color: #ccc;
     @include icon-background('upload.png');
